Bump modernizer-maven-plugin.version from 3.3.0 to 3.4.0 (#1739)
* Bump modernizer-maven-plugin.version from 3.3.0 to 3.4.0

Bumps `modernizer-maven-plugin.version` from 3.3.0 to 3.4.0.

Updates `org.gaul:modernizer-maven-annotations` from 3.3.0 to 3.4.0
- [Release notes](https://github.com/gaul/modernizer-maven-plugin/releases)
- [Commits](https://github.com/gaul/modernizer-maven-plugin/compare/modernizer-maven-plugin-3.3.0...modernizer-maven-plugin-3.4.0)

Updates `org.gaul:modernizer-maven-plugin` from 3.3.0 to 3.4.0
- [Release notes](https://github.com/gaul/modernizer-maven-plugin/releases)
- [Commits](https://github.com/gaul/modernizer-maven-plugin/compare/modernizer-maven-plugin-3.3.0...modernizer-maven-plugin-3.4.0)

---
updated-dependencies:
- dependency-name: org.gaul:modernizer-maven-annotations
  dependency-version: 3.4.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: org.gaul:modernizer-maven-plugin
  dependency-version: 3.4.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Apply new Modernizer rules for empty collections

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Mark Prins <1165786+mprins@users.noreply.github.com>